Removed user pagination requirement in MP4.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -52,7 +52,7 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 ####Views
 
 1. User List:
-	+ List **all** user names ~~(20 at a time using pagination)~~. **No need for pagination in the user list view.**. Clicking on a user should take us to the User Details view.
+	+ List **all** user names ~~(20 at a time using pagination)~~. **No need for pagination in the user list view**. Clicking on a user should take us to the User Details view.
 	+ Have next and previous buttons. 
 	+ Have a button to create a new user that takes you to Add User view. 
 	+ Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons.
