Tried to match the MP4 spec to MP3.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -32,14 +32,15 @@ It is <span style="color: red">strongly</span> suggested that you watch the foll
 
 Your goal is to **recreate the User-Task management system of MP 3 using the Meteor framework**. Follow [these exact instructions](https://www.meteor.com/install) to get started with building your Meteor app from scratch. While there is no stylistic requirements for your webapp, the overall functionality must remain exactly the same.
 
-####User Schema
+####Schema
+#####Users
 
 1. "name" - String
 + "email" - String
 + "pendingTasks" - [String] - The _id fields of the *pending* tasks that this user has
 + "dateCreated" - Date - should be set automatically by server
 
-####Task Schema
+#####Tasks
 
 1. "name" - String
 + "description" - String
@@ -53,15 +54,15 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 
 1. User List:
 	+ List **all** user names ~~(20 at a time using pagination)~~. **No need for pagination in the user list view**. Clicking on a user should take us to the User Details view.
-	+ Have next and previous buttons. 
-	+ Have a button to create a new user that takes you to Add User view. 
-	+ Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons.
-	+ Have a delete button next to each displayed user
+	+ ~~Have next and previous buttons.~~
+	+ Have a button to create a new user that opens an Add User modal. 
+	+ ~~Have a sort-by dropdown menu with appropriate options (name, dateCreated) and ascending/descending radio buttons.~~
+	+ Have a delete button next to each displayed user.
 + Task List:
 	+ List task names (use pagination to display only 10 at a time) with the name of the assigned user next to it. Clicking on a task should take us to the Task Details view.
 	+ Have an input (for example radio buttons) to show "All", "Completed" or "Pending" tasks. By default it should show the Pending tasks.
 	+ Have next and previous buttons.
-	+ Have a button to create a new task that takes you to Add Task view.
+	+ Have a button to create a new task that opens an Add Task modal.
 	+ Have a sort-by dropdown menu with appropriate options (name, username, dateCreated, deadline) and ascending/descending radio buttons.
 	+ Have a delete button next to each displayed task.
 + User Details:
@@ -75,6 +76,7 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 	+ Have a way to change the completion status of the tasks.
 
 ####Modals
+#####This is an added requirement (not originally in MP3).
 
 1. Add User:
 	+ Use a form to collect a new user's name and email.
@@ -83,11 +85,17 @@ Your goal is to **recreate the User-Task management system of MP 3 using the Met
 
 These modals should be accessible through buttons in the User List and Task List, respectively. After succesfully adding a user/task, the modal should disappear and an automatically-updated user/task list should appear in real-time.
 
+####Client-side Validation
+
 You should have client side validation in both forms to ensure that:
 + Users cannot be created (or updated) without a name or email.
 + Duplicate users should not be allowed (check this by looking for duplicate emails).
 + Tasks cannot be created (or updated) without a name or a deadline. 
 + These form fields should be marked with a red * to indicate that they are required and an error message should pop up when users do not comply.
+
+####Example Video
+
+Refer to the (example video from MP3)[https://www.youtube.com/watch?v=3MoYSJj5M3g] to understand the overall interaction with the Task Manager system.
 
 ####Server
 
