Tried to match the MP4 spec to MP3.

--- a/_posts/2015-4-10-Makeup.md
+++ b/_posts/2015-4-10-Makeup.md
@@ -95,7 +95,7 @@ You should have client side validation in both forms to ensure that:
 
 ####Example Video
 
-Refer to the (example video from MP3)[https://www.youtube.com/watch?v=3MoYSJj5M3g] to understand the overall interaction with the Task Manager system.
+Refer to the [example video from MP3](https://www.youtube.com/watch?v=3MoYSJj5M3g) to understand the overall interaction with the Task Manager system.
 
 ####Server
 
