Updated Final Presentation information.

--- a/_posts/2015-4-3-Final.md
+++ b/_posts/2015-4-3-Final.md
@@ -38,30 +38,38 @@ Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiu
 
 Each team will be given five minutes to present the following in class:
 
-+ the problem they are solving
-+ demo of their solution (webapp) using a [powerpoint prototype](http://boxesandarrows.com/interactive-prototypes-with-powerpoint/).
++ The problem they are solving
++ Demo of their solution (webapp) using a [powerpoint prototype](http://boxesandarrows.com/interactive-prototypes-with-powerpoint/).
 
 ###Part C: Final Presentation
 
 **Due Date - *May 11*, 2015, 8.00AM CST**
 
-On the day of your final presentation (to be determined), your overall deliverables are:
+On the day of your final presentation, your overall deliverables are:
 
 + Source Code for the Project / URL to GitHub Repository
 + URL to your hosted project
 + Approximately 5-minute video detailing your web app's purpose, design, and functionality
-+ Your powerpoint deck
++ ~~Your powerpoint deck~~
 
-More details coming soon...
+Your presentation will be 5 minutes for the video and 2 minutes for Q&amp;A.
+
+####Video Requirements
++ 5-minutes length max
++ Should focus on design and functionality
++ Use screen capture software (SnagIt/ScreenFlow (Mac)/Camstasia/Quicktime) 
++ Demo the important user flows
++ Voice-over should tell a concrete story: user, problem, and how your app solves it
++ Communicate the motivation behind design decisions (e.g. _how did heuristic evaluation play a role in changes that were made to the interface?_)
 
 ###Grade Breakdown
 
 + Proposal: 5%
 + Prototype Presentation: 10%
-+ Final Presentation: 10%
-+ Design (UX, UI, visual, responsive): 15%
-+ Heuristic evaluation + 1 revision: 10%
++ Final Presentation (Video): 10%
++ Design (UX and UI): 15%
++ Heuristic Evaluation: 10%
 + Front end: 25%
-+ Backend (API, javascript server, database): 25%
++ Back end (API, server, database): 25%
 
 **Note**: There will be a final competition separate from the grading that will be judged on novelty and usefulness of app. Prizes will be awarded to top team(s).
