--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: "Lab 1.2: Development Environment and Server Configuration"
+title: "Lab 1.0: Development Environment and Server Configuration"
 <!-- permalink: lab1.html -->
 ---
 
-###Setting up a develpoment Environment
+###Setting up a Development Environment
 
-<span style="color: red"> Attention: Step 8 has changed significantly! Also, please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
+<span style="color: red"> Attention: Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
 
 In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Aslo, having the same development environment for all students in class helps us debug your code faster.
 
@@ -18,7 +18,7 @@ The following has been tested for Mac OS X. We anticipate that steps 1 and 2 mig
 
 3 -  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and github. So, use the following command:
 
-```bash 
+```bash
 git clone https://github.com/uiuc-web-programming/vagrant-dev.git
 ```
 As an alternative you can use a graphical client such as the [Github Mac Client](https://mac.github.com/)
@@ -49,7 +49,7 @@ dos2unix install.sh #you can skip this if you are not on a Windows machine
 sh install.sh
 source ~/.profile
 ```
- 8 - Go to your github account (or create one) and create a new repository named `mp1`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo by using the commands below 
+ 8 - Go to your github account (or create one) and create a new repository named `mp1`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo by using the commands below
 
 ```bash
 git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git
@@ -102,11 +102,9 @@ grunt
 
 ###Setting up the Server
 
-<span style="color: red"> Attention: Step 4 has changed significantly! </span>
+1 - Get [Github Student Developer Pack](https://education.github.com/pack) and get the $50 in platform credit for [DigitalOcean](https://www.digitalocean.com/)
 
-1 - Get [Github Student Developer Pack](https://education.github.com/pack) and get the $100 in platform credit for [DigitalOcean](https://www.digitalocean.com/) 
-
-2 - [Create a droplet](https://www.digitalocean.com/community/tutorials/how-to-create-your-first-digitalocean-droplet-virtual-server) on DigitalOcean with Ubuntu on it and create a new user on it named `vagrant` by following directions [here](https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-14-04) (steps 1-3).  You should also setup ssh-keys as recommended in that article (Step 4). More information about setting up ssh keys can be found [here](https://www.digitalocean.com/community/tutorials/how-to-set-up-ssh-keys--2). 
+2 - [Create a droplet](https://www.digitalocean.com/community/tutorials/how-to-create-your-first-digitalocean-droplet-virtual-server) on DigitalOcean with Ubuntu on it and create a new user on it named `vagrant` by following directions [here](https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-14-04) (steps 1-3).  You should also setup ssh-keys as recommended in that article (Step 4). More information about setting up ssh keys can be found [here](https://www.digitalocean.com/community/tutorials/how-to-set-up-ssh-keys--2).
 
 3 - Log in to your server with username `vagrant` and get the install script from our vagrant-dev repo and run it
 
@@ -127,7 +125,7 @@ grunt compass
 grunt uglify
 ```
 
-5 - Start screen and serve the files by running the expressjs server. 
+5 - Start screen and serve the files by running the expressjs server.
 
 ```bash
 screen
