--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -4,7 +4,7 @@ title: "Lab 1.0: Development Environment and Server Configuration"
 <!-- permalink: lab1.html -->
 ---
 
-###Setting up a Development Environment
+<span class="section-heading">SETTING UP A DEVELOPMENT ENVIRONMENT</span>
 
 <span style="color: red"> Attention: Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
 
@@ -100,7 +100,7 @@ grunt
 
 17 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
 
-###Setting up the Server
+<span class="section-heading">SETTING UP THE SERVER</span>
 
 1 - Get [Github Student Developer Pack](https://education.github.com/pack) and get the $50 in platform credit for [DigitalOcean](https://www.digitalocean.com/)
 
@@ -151,6 +151,3 @@ exit # exit from server
 ```
 
 9 - If you want to completely stop your droplet you should take a snapshot of it and then destroy it. You'll be able to create a new droplet from the snapshot image anytime to bring it back online. Otherwise, if you just power it off, your diskspace, CPU, RAM, and IP address are all reserved while your droplet is powered off. So, they will keep charging you for the droplet.
-
-
-
