--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -8,7 +8,7 @@ title: "Lab 1.0: Development Environment and Server Configuration"
 
 <span style="color: red"> Attention: Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
 
-In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Aslo, having the same development environment for all students in class helps us debug your code faster.
+In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Also, having the same development environment for all students in class helps us debug your code faster.
 
 The following has been tested for Mac OS X. We anticipate that steps 1 and 2 might be different for other operating systems. You are responsible for reading the documentation in such cases.
 
@@ -16,12 +16,12 @@ The following has been tested for Mac OS X. We anticipate that steps 1 and 2 mig
 
 2 - Install [Vagrant](https://www.vagrantup.com/)
 
-3 -  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and github. So, use the following command:
+3 -  Clone the [vagrant-dev repository](https://github.com/uiuc-web-programming/vagrant-dev.git) from the [class github account](https://github.com/uiuc-web-programming/) to your machine. You are encouraged to use the command line for interacting with git and Github. So, use the following command:
 
 ```bash
 git clone https://github.com/uiuc-web-programming/vagrant-dev.git
 ```
-As an alternative you can use a graphical client such as the [Github Mac Client](https://mac.github.com/)
+As an alternative, you can use a graphical client such as the [Github Mac Client](https://mac.github.com/)
 
 4 - Change to the `vagrant-dev` directory and inspect the Vagrantfile. In it we have defined what operating system we want for our virtual machine (Ubuntu in our case) and have also specified what ports of the virtual/guest machine (Ubuntu) should be forwarded to what ports of the host machine (OS X)
 
@@ -40,7 +40,7 @@ vagrant up
 vagrant ssh
 ```
 
-7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way  you can edit files using the editor on OS X and run them from the terminal in Ubuntu. Now run the `install.sh` script present in that folder.
+7 - The `vagrant-dev` folder on your host machine is mounted as `/vagrant` in your guest machine. Change your directory to this folder. This folder remains synced between the two operating systems and is the ideal place to put your projects. That way, you can edit files using the editor on OS X and run them from the terminal in Ubuntu. Now run the `install.sh` script present in that folder.
 
 ```bash
 cd /vagrant
@@ -49,7 +49,7 @@ dos2unix install.sh #you can skip this if you are not on a Windows machine
 sh install.sh
 source ~/.profile
 ```
- 8 - Go to your github account (or create one) and create a new repository named `mp1`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo by using the commands below
+ 8 - Go to your github account (or create one), and create a new repository named `mp1`. ***Set it to private*** (you'll have to activate the [Github student developer pack](https://education.github.com/pack) to be able to create private repos. The other option is to use [bitbucket](https://bitbucket.org/)). [Create a duplicate](https://help.github.com/articles/duplicating-a-repository/) of the [MP-1 starter code](https://github.com/uiuc-web-programming/mp1_starter) from the class github repo by using the commands below
 
 ```bash
 git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git
@@ -66,7 +66,7 @@ git clone https://github.com/your-github-username/mp1
 cd mp1
 ```
 
-10 - Install the NPM packages needed for the project. This reads the `package.json` files and installs the packages in the `node_packages` folder. If you have Windows on your host machine you need to add the `--no-bin-links` option to this command.
+10 - Install the NPM packages needed for the project. This reads the `package.json` files and installs the packages in the `node_packages` folder. If you have Windows on your host machine, you need to add the `--no-bin-links` option to this command.
 
 ```bash
 npm install
