updated to version 1.1 due to change in mp1_starter code

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -1,12 +1,18 @@
 ---
 layout: default
-title: "Lab 1.0: Development Environment and Server Configuration"
+title: "Lab 1.1: Development Environment and Server Configuration"
 <!-- permalink: lab1.html -->
 ---
-
-###Setting up a Development Environment
+<span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016) and [this repository](https://github.com/uiuc-web-programming/mp1_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
 <span style="color: red"> Attention: Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
+
+<span style="color: blue"> Change Log:</span>
+<span> 1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new.</span>
+
+
+
+###Setting up a Development Environment
 
 In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Aslo, having the same development environment for all students in class helps us debug your code faster.
 
@@ -44,8 +50,8 @@ vagrant ssh
 
 ```bash
 cd /vagrant
-sudo apt-get install dos2unix #you can skip this if you are not on a Windows machine
-dos2unix install.sh #you can skip this if you are not on a Windows machine
+sudo apt-get install dos2unix **#you can skip this if you are not on a Windows machine**
+dos2unix install.sh **#you can skip this if you are not on a Windows machine**
 sh install.sh
 source ~/.profile
 ```
@@ -55,7 +61,7 @@ source ~/.profile
 git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git
 cd mp1_starter.git
 git push --mirror https://github.com/your-github-username/mp1.git
-# Mirror-push to your mp1 repository. Use your github username in the URL. Change the URL if you're using bitbucket.
+# **Mirror-push to your mp1 repository. Use your github username in the URL. Change the URL if you're using bitbucket.**
 cd ..
 rm -rf mp1_starter.git
 ```
@@ -78,27 +84,32 @@ npm install
 bower install
 ```
 
-12 - Now use grunt to compile the scss files. The output will be saved in `public/css` folder
+12 - Now use grunt to compile the scss files located at `source_scss`. The output will be saved in `public/css` folder
 
 ```bash
 grunt compass
 ```
-13 - Now use grunt to uglify the javascript files. The output will be saved in `public/js` folder
+13 - Now use grunt to uglify the javascript files located at `source_js`. The output will be saved in `public/js` folder
 
 ```bash
 grunt uglify
 ```
 
-14 - Serve the files using grunt.
+14 - Now use grunt to copy HTML files from the `source_html` to the `public` folder
+
+```bash
+grunt copy
+
+15 - Serve the files using grunt.
 
 ```bash
 grunt
 ```
-15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `scss` folder, the `js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
+14 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `source_html` folder, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
 
-16 - Now implement MP1 by writing your code in the `scss` folder, the `js` folder and the `public/index.html` file. Push changes to your `mp1` repo on github.
+15 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file. Push changes to your `mp1` repo on github.
 
-17 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
+16 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
 
 ###Setting up the Server
 
@@ -123,6 +134,7 @@ npm install
 bower install
 grunt compass
 grunt uglify
+grunt copy
 ```
 
 5 - Start screen and serve the files by running the expressjs server.
