--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -5,19 +5,16 @@ title: "Lab 1.1: Development Environment and Server Configuration"
 ---
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016) and [this repository](https://github.com/uiuc-web-programming/mp1_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
-<span style="color: red"> Attention: Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.</span>
+<span style="color: red"> Attention: </span> Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.
 
-<span style="color: blue"> Change Log:</span>
-<span> 1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new.</span>
+<span style="color: blue"> Change Log:</span><br>
+1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new.
 
 
-
-###Setting up a Development Environment
+<!-- ###Setting up a Development Environment -->
+<span class="section-heading">SETTING UP A DEVELOPMENT ENVIRONMENT</span>
 
 In this lab we will set up a development environment for use throughout the class. Our aim is to develop applications in an environment as close as possible to the final server our code is going to be deployed on. Also, having the same development environment for all students in class helps us debug your code faster.
-
-<!-- <span class="section-heading">SETTING UP A DEVELOPMENT ENVIRONMENT</span> -->
-
 
 The following has been tested for Mac OS X. We anticipate that steps 1 and 2 might be different for other operating systems. You are responsible for reading the documentation in such cases.
 
