--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -98,7 +98,7 @@ grunt uglify
 14 - Now use grunt to copy HTML files from the `source_html` to the `public` folder
 
 ```bash
-grunt copy
+grunt copy:html
 
 15 - Serve the files using grunt.
 
@@ -134,7 +134,7 @@ npm install
 bower install
 grunt compass
 grunt uglify
-grunt copy
+grunt copy:html
 ```
 
 5 - Start screen and serve the files by running the expressjs server.
