--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -109,6 +109,8 @@ grunt
 
 15 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file. Push changes to your `mp1` repo on github.
 
+<span style="color: red"> Warning: </span>  **Do not edit anything under the `public` folder.** All things there are auto-generated and any changes you make there will get overwritten.
+
 16 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
 
 <span class="section-heading">SETTING UP THE SERVER</span>
