--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -8,7 +8,7 @@ title: "Lab 1.1: Development Environment and Server Configuration"
 <span style="color: red"> Attention: </span> Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.
 
 <span style="color: blue"> Change Log:</span><br>
-1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new.
+1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new. Step 14 and 15 have changed.
 
 
 <!-- ###Setting up a Development Environment -->
@@ -105,7 +105,7 @@ grunt copy:html
 ```bash
 grunt
 ```
-14 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `source_html` folder, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
+14 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
 
 15 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file. Push changes to your `mp1` repo on github.
 
