updates to reflect changes in mp1_starter code that now includes a public/media folder

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Lab 1.1: Development Environment and Server Configuration"
+title: "Lab 1.2: Development Environment and Server Configuration"
 <!-- permalink: lab1.html -->
 ---
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016) and [this repository](https://github.com/uiuc-web-programming/mp1_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
@@ -9,6 +9,7 @@ title: "Lab 1.1: Development Environment and Server Configuration"
 
 <span style="color: blue"> Change Log:</span><br>
 1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new. Step 14 and 15 have changed.
+1.2: The `mp1_starter` code has changed. Step 14 onwards under Development Environment Setup have been updated. Step 4 under Server Setup has been updated.
 
 
 <!-- ###Setting up a Development Environment -->
@@ -95,24 +96,20 @@ grunt compass
 grunt uglify
 ```
 
-14 - Now use grunt to copy HTML files from the `source_html` to the `public` folder
+14 - Serve the files using grunt.
 
 ```bash
-grunt copy:html
+grunt serve
 ```
+<span style="color: blue"> Note: </span> The last three steps can be done together by just saying `grunt`.
 
-15 - Serve the files using grunt.
+15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
 
-```bash
-grunt
-```
-16 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
+16 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder, the `public/index.html` file and the `public/media` folder. Push changes to your `mp1` repo on github.
 
-17 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder and the `source_html/index.html` file. Push changes to your `mp1` repo on github.
+<span style="color: red"> Warning: </span>  **Do not edit anything under the `public/css` or `public/js` folder.** All things there are auto-generated and any changes you make there will get overwritten by Grunt.
 
-<span style="color: red"> Warning: </span>  **Do not edit anything under the `public` folder.** All things there are auto-generated and any changes you make there will get overwritten.
-
-18 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
+17 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
 
 <span class="section-heading">SETTING UP THE SERVER</span>
 
@@ -137,7 +134,7 @@ npm install
 bower install
 grunt compass
 grunt uglify
-grunt copy:html
+grunt serve
 ```
 
 5 - Start screen and serve the files by running the expressjs server.
