--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -8,7 +8,7 @@ title: "Lab 1.2: Development Environment and Server Configuration"
 <span style="color: red"> Attention: </span> Please apply for [Github student developer pack](https://education.github.com/pack) as soon as possible.
 
 <span style="color: blue"> Change Log:</span><br>
-1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new. Step 14 and 15 have changed.
+1.1: The `mp1_starter` code has changed. Step 14 under Development Environment Setup is new. Step 14 and 15 have changed. <br>
 1.2: The `mp1_starter` code has changed. Step 14 onwards under Development Environment Setup have been updated. Step 4 under Server Setup has been updated.
 
 
@@ -107,7 +107,7 @@ grunt serve
 
 16 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder, the `public/index.html` file and the `public/media` folder. Push changes to your `mp1` repo on github.
 
-<span style="color: red"> Warning: </span>  **Do not edit anything under the `public/css` or `public/js` folder.** All things there are auto-generated and any changes you make there will get overwritten by Grunt.
+<span style="color: red"> Warning: </span>  **Do not edit anything under the `public/css` or `public/js` folders.** All things there are auto-generated and any changes you make there will get overwritten by Grunt.
 
 17 - You can stop grunt by using `ctrl+c`. You can exit the vagrant guest VM by saying `exit`.
 
