Changed source_scss to source_sass

--- a/_posts/2015-1-28-Lab-1.md
+++ b/_posts/2015-1-28-Lab-1.md
@@ -85,7 +85,7 @@ npm install
 bower install
 ```
 
-12 - Now use grunt to compile the scss files located at `source_scss`. The output will be saved in `public/css` folder
+12 - Now use grunt to compile the scss files located at `source_sass`. The output will be saved in `public/css` folder
 
 ```bash
 grunt compass
@@ -103,9 +103,9 @@ grunt serve
 ```
 <span style="color: blue"> Note: </span> The last three steps can be done together by just saying `grunt`.
 
-15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_scss` folder, the `source_js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
+15 - Open your browser and point it to `localhost:3000`. You should see the served webpage there. If you leave grunt running and now make changes to the files in the `source_sass` folder, the `source_js` folder and the `public/index.html` file, you will see the webpage reload automatically. This is done through [grunt livereload](https://github.com/gruntjs/grunt-contrib-watch#optionslivereload). This way you can code away on your code editor while seeing changes in the browser side by side.
 
-16 - Now implement MP1 by writing your code in the `source_scss` folder, the `source_js` folder, the `public/index.html` file and the `public/media` folder. Push changes to your `mp1` repo on github.
+16 - Now implement MP1 by writing your code in the `source_sass` folder, the `source_js` folder, the `public/index.html` file and the `public/media` folder. Push changes to your `mp1` repo on github.
 
 <span style="color: red"> Warning: </span>  **Do not edit anything under the `public/css` or `public/js` folders.** All things there are auto-generated and any changes you make there will get overwritten by Grunt.
 
