--- a/_posts/2016-1-26-MP-1.md
+++ b/_posts/2016-1-26-MP-1.md
@@ -4,14 +4,14 @@ title: "MP 1.0: One Web Page To Rule Them All"
 due: Feb 16, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Due Date - 11.59pm on February 16, 2016
+<span class="section-heading">Due Date - 11.59pm on February 16, 2016</span>
 
-###Overview
+<span class="section-heading">Overview</span>
 In this programming assignment, you will design and implement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or a personal/portfolio page. This assignment will give you first-hand experience with HTML5 (e.g. header, canvas, video), CSS3/SASS (e.g. use of webfonts, animations, layout), and Javascript/jQuery.
 
 Refer to Dev Lab 1 for setting up a development environment and a server for this assignment.
 
-###Required Features
+<span class="section-heading">Required Features</span>
 Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.
 
 1. Layout: All content must be laid out in a single page with full-width horizontal stripes/sections including a header and a footer - [Example](http://courses.engr.illinois.edu/cs498rk1/images/mp1/2.png)
@@ -30,7 +30,7 @@ Your webpage will have to implement the features listed below. Note that the exa
 +	Inclusion of social media icons
 +	<span style="color: red"> Extra Credit: </span>create a original [favicon](http://en.wikipedia.org/wiki/Favicon) for your page. The best favicon will be used for the class webpage.
 
-###Rules
+<span class="section-heading">Rules</span>
 1.	This is an individual assignment. No collaboration is permitted.
 +   It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
 +	There must be no use of content management systems, or frameworks (e.g. Bootstrap, Pure CSS, Foundation, etc.)
@@ -39,7 +39,7 @@ Your webpage will have to implement the features listed below. Note that the exa
 +	SASS/SCSS principles must be utilized (e.g. mix-ins, variables). Technically you can write plain CSS in SCSS files. That is not what we want.
 + If you think something you're doing might not be acceptable, please ask on Piazza.
 
-###Grade Breakdown
+<span class="section-heading">Grade Breakdown</span>
 
 1. 	Layout and Overall Design - 20%
 + Code (follows HTML5, SASS/SCSS, Javascript/jQuery best practices) - 10%
@@ -59,5 +59,5 @@ Your webpage will have to implement the features listed below. Note that the exa
 +	Inclusion of social media icons - 2%
 +	<span style="color: red"> Extra Credit: 2% </span>
 
-###Submission Details
+<span class="section-heading">Submission Details</span>
 Coming Soon!
