--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -4,9 +4,9 @@ title: "Final Project: Your Own Web App!"
 due: Feb 24, 11.59PM CST
 <!-- permalink: lab1.html -->
 ---
-### Proposal Due - *Feb 24*, 2016, 11.59PM CST
 
-###Overview
+
+<span class="section-heading">Overview</span>
 
 Your goal is to **create a database-backed web application which utilizes a RESTful API** with the following constraints:
 
@@ -16,9 +16,11 @@ Your goal is to **create a database-backed web application which utilizes a REST
 4. Your project needs to have a heuristic evaluation with at least one revision. Make sure you plan time for this.
 5. Your project must have a strong focus on design, primarily in user experience (UX), user interface (UI), and responsiveness.
 
-###Part A: Proposal
+<span class="section-heading">Part A: Proposal</span>
 
 **Due - *Feb 24*, 2016, 11.59PM CST**
+<span class="section-heading">Proposal Due - *Feb 24*, 2016, 11.59PM CST</span>
+
 
 Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiuc.web.programming@gmail.com) containing the following:
 
