--- a/_posts/2016-2-15-Final.md
+++ b/_posts/2016-2-15-Final.md
@@ -18,9 +18,7 @@ Your goal is to **create a database-backed web application which utilizes a REST
 
 <span class="section-heading">Part A: Proposal</span>
 
-**Due - *Feb 24*, 2016, 11.59PM CST**
-<span class="section-heading">Proposal Due - *Feb 24*, 2016, 11.59PM CST</span>
-
+<span style="color: red">**Due - *Feb 24*, 2016, 11.59PM CST**</span>
 
 Email a **one-page** PDF proposal to [uiuc.web.programming@gmail.com](mailto:uiuc.web.programming@gmail.com) containing the following:
 
