--- a/_posts/2016-2-17-Lab-2.md
+++ b/_posts/2016-2-17-Lab-2.md
@@ -45,4 +45,4 @@ You should be able to see the sample webpage at `http://localhost:3000`.
 
 5 - You can then develop your MP locally and push changes to your Github. When you are ready to host in on the server, you can pull your code from the github repository as you did for MP1.
 
-6 - If you use additional libraries, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
+6 - If you use additional libraries, make sure that all libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
