--- a/_posts/2016-2-17-MP-2.md
+++ b/_posts/2016-2-17-MP-2.md
@@ -8,39 +8,7 @@ due: Mar 1, 11.59PM CST
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016) and [this repository](https://github.com/uiuc-web-programming/mp2_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
-<div class="section-heading">Overview</div>
-In this programming assignment, you will make your single-page website responsive & improve its visual design.
-
-You can use the development environment and server setup you used for MP 1. Refer to Lab 2 & the README for details about the MP 2 starter code.
-
-<div class="section-heading">Part A: Responsive Design With Foundation</div>
-Goal: Rewrite your website from MP 1 using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
-
-Requirements:
-
-1. Keep the content the same as your MP 1 webpage.
-+ Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
-+ Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
-+ You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
-+ You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
-+ You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
-
-<div class="section-heading">Part B: Visual Design</div>
-
-Goal: Improve the visual design of the web page from Part A. Here are some specific things you can do:
-
-1. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
-+ To customize Foundation components, modify the Foundation scss files in `public/foundation6_lib/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
-+ Additional styles can also be added to the scss files in `source_scss` folder like you did in MP 1.
-+ Your redesign should draw on the visual design principles discussed in class:
- 1. functionally similar elements should have similar styling; functionally different elements should be styled differently
- + contrast should be used to give visual weight to important areas
- + use variations in font, size, weight, and style to create typographic contrast
- + use whitespace to perceptually group related elements and separate semantically different areas
- + use margins, leading, and adequate background/text color contrast to make text more readable
- + choose fonts and colors that match the mood/message/content of your site
-
-<div class="section-heading">Part C: Research Data</div>
+<div class="section-heading">Part A: Research Data</div>
 
 We want you to perform research for your responsive website using [Apropose](https://apropose.com/). This can be for any type of page that you are creating (for a portfolio, for a personal website, for an organization, etc).
 
@@ -71,6 +39,39 @@ There are two ways to add a webpage to your trendset. The first way is to type o
 Submission: You will submit URLs to your trendsets along with your MP2 code.
 
 To get the shareable link for your trendset, navigate into the specific trendset by clicking on it (from your profile) and in the top right click on the link icon. Copy and paste the link for each of your trendsets into the submission form.
+
+<div class="section-heading">Part B: Responsive Design With Foundation</div>
+Goal: Rewrite your website from MP 1 using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
+
+
+In this programming assignment, you will make your single-page website responsive & improve its visual design.
+
+You can use the development environment and server setup you used for MP 1. Refer to Lab 2 & the README for details about the MP 2 starter code.
+
+Requirements:
+
+1. Keep the content the same as your MP 1 webpage.
++ Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
++ Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
++ You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
++ You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
++ You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
+
+<div class="section-heading">Part C: Visual Design</div>
+
+Goal: Improve the visual design of the web page from Part A. Here are some specific things you can do:
+
+1. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
++ To customize Foundation components, modify the Foundation scss files in `public/foundation6_lib/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
++ Additional styles can also be added to the scss files in `source_scss` folder like you did in MP 1.
++ Your redesign should draw on the visual design principles discussed in class:
+ 1. functionally similar elements should have similar styling; functionally different elements should be styled differently
+ + contrast should be used to give visual weight to important areas
+ + use variations in font, size, weight, and style to create typographic contrast
+ + use whitespace to perceptually group related elements and separate semantically different areas
+ + use margins, leading, and adequate background/text color contrast to make text more readable
+ + choose fonts and colors that match the mood/message/content of your site
+
 
 <div class="section-heading">Rules</div>
 1. This is an individual assignment. No collaboration is permitted.
