--- a/_posts/2016-2-17-MP-2.md
+++ b/_posts/2016-2-17-MP-2.md
@@ -19,10 +19,10 @@ Each webpage in a trendset should have an explanation with your observations abo
 Things to talk about can include:
 
 1. The pros and cons of different designs and pages that you see
-+ Design trends or features that you notice across different pages (ideally this trend is also reflected in your own webpage)
-+ How the different responsive elements on the page move as the page is resized
-+ What information is on the page and how it’s organized
-+ Any type of design trend that you’ve noticed on the page or across multiple pages (e.g. if you’re looking at fashion websites and notice that many of them have black navigation bars and use small font in all caps)
+2. Design trends or features that you notice across different pages (ideally this trend is also reflected in your own webpage)
+3. How the different responsive elements on the page move as the page is resized
+4. What information is on the page and how it’s organized
+5. Any type of design trend that you’ve noticed on the page or across multiple pages (e.g. if you’re looking at fashion websites and notice that many of them have black navigation bars and use small font in all caps)
 
 Instructions: To get started, please sign up for an account on Apropose [here](https://apropose.com/signup/illinois!edu).
 You must sign up using your illinois.edu email account. If you run into problems signing up, please post on Piazza.
@@ -51,34 +51,34 @@ You can use the development environment and server setup you used for MP 1. Refe
 Requirements:
 
 1. Keep the content the same as your MP 1 webpage.
-+ Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
-+ Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
-+ You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
-+ You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
-+ You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
+2. Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
+3. Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
+4. You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
+5. You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
+6. You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
 
 <div class="section-heading">Part C: Visual Design</div>
 
 Goal: Improve the visual design of the web page from Part A. Here are some specific things you can do:
 
 1. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
-+ To customize Foundation components, modify the Foundation scss files in `public/foundation6_lib/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
-+ Additional styles can also be added to the scss files in `source_scss` folder like you did in MP 1.
-+ Your redesign should draw on the visual design principles discussed in class:
+2 To customize Foundation components, modify the Foundation scss files in `public/foundation6_lib/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
+3. Additional styles can also be added to the scss files in `source_scss` folder like you did in MP 1.
+4. Your redesign should draw on the visual design principles discussed in class:
  1. functionally similar elements should have similar styling; functionally different elements should be styled differently
- + contrast should be used to give visual weight to important areas
- + use variations in font, size, weight, and style to create typographic contrast
- + use whitespace to perceptually group related elements and separate semantically different areas
- + use margins, leading, and adequate background/text color contrast to make text more readable
- + choose fonts and colors that match the mood/message/content of your site
+ 2. contrast should be used to give visual weight to important areas
+ 3. use variations in font, size, weight, and style to create typographic contrast
+ 4. use whitespace to perceptually group related elements and separate semantically different areas
+ 5. use margins, leading, and adequate background/text color contrast to make text more readable
+ 6. choose fonts and colors that match the mood/message/content of your site
 
 
 <div class="section-heading">Rules</div>
 1. This is an individual assignment. No collaboration is permitted.
-+ It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
-+ If you think something you're doing might not be acceptable, please ask on Piazza.
-+ If you have additional assets (say pictures) you should put them under `public/data` folder and put everything there or in its subfolders (say `public/data/pics` and `public/data/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory.
-+ You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be anything like:
+2. It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.
+3. If you think something you're doing might not be acceptable, please ask on Piazza.
+4. If you have additional assets (say pictures) you should put them under `public/data` folder and put everything there or in its subfolders (say `public/data/pics` and `public/data/videos`). There should be no other place in your folder structure where you are loading assets from. For example, do not create a `css/images` directory.
+5. You should not use absolute paths to load any of your asset files (say css, images or js) from your server. For example, there should not be anything like:
 
 ```html
 src="/photos/skyline.jpg"
