Changes regarding detaching from MP1

--- a/_posts/2016-2-17-MP-2.md
+++ b/_posts/2016-2-17-MP-2.md
@@ -41,25 +41,21 @@ Submission: You will submit URLs to your trendsets along with your MP2 code.
 To get the shareable link for your trendset, navigate into the specific trendset by clicking on it (from your profile) and in the top right click on the link icon. Copy and paste the link for each of your trendsets into the submission form.
 
 <div class="section-heading">Part B: Responsive Design With Foundation</div>
-Goal: Rewrite your website from MP 1 using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
+Goal: Create a  website using the [Foundation front-end framework](http://foundation.zurb.com/docs/) to make it responsive. You will also have the opportunity to use third-party UI components to achieve the same functionality (i.e., navigation bar, carousel) with fewer lines of code.
 
-
-In this programming assignment, you will make your single-page website responsive & improve its visual design.
+In this programming assignment, you will make a single-page website responsive & aesthetically pleasing. Part A is about doing research for your site and understanding common patterns in information architecture, style, and responsive design. Now, you implement.
 
 You can use the development environment and server setup you used for MP 1. Refer to Lab 2 & the README for details about the MP 2 starter code.
 
 Requirements:
 
-1. Keep the content the same as your MP 1 webpage.
+1. Create a single-page marketing website for a real client: person, organization, company, concert, movie, etc. NOTE: You can reuse content for MP1 provided that it follows this requirement.
 2. Start from scratch -- don't borrow code from MP1. Borrowing code from MP 1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.
 3. Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes (at least three) and the rationale behind them.
 4. You are free to use any component that Foundation provides (such as buttons, drop-down menus etc.) if it makes sense for your website. The [Foundation documentation page](http://foundation.zurb.com/docs/) lists all such components on the left side of the page.
 5. You are free to use any third party plugins or libraries as you deem fit. For example, you can implement your carousel using [Slick Carousel](http://kenwheeler.github.io/slick/). However, make sure that all such libraries get installed when we do `npm install` and `bower install` after cloning your MP 2 code repo (this can be done by adding the libraries in the `packages.json` or `bower.json` file.
-6. You will get full credit for this part even if you do not change the default styling of foundation/third-party components.
 
-<div class="section-heading">Part C: Visual Design</div>
-
-Goal: Improve the visual design of the web page from Part A. Here are some specific things you can do:
+To improve the visual design of the web page from Part B, here are some specific things you can do:
 
 1. Identify aspects of the site's visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas (at least three) and how you improved them.
 2 To customize Foundation components, modify the Foundation scss files in `public/foundation6_lib/scss`. The [Foundation documentation](http://foundation.zurb.com/docs/) describes the available sass variables/mixins for each component.
