fixing new lines on grade breakdown

--- a/_posts/2016-2-17-MP-2.md
+++ b/_posts/2016-2-17-MP-2.md
@@ -90,8 +90,8 @@ This is needed because when we host your code for grading, the folder structure 
 
 <div class="section-heading">Grading Breakdown</div>
 
-Research on Apropose - 20%
-Responsive Design - 60%
-Visual Design - 20%
+1. Research on Apropose - 20%
+2. Responsive Design - 60%
+3. Visual Design - 20%
  
 Please be mindful of the requirements that we've listed for each of these three sections. For the research portion, please complete at least 2 trendsets of 5-10 webpages each, with an optional third trendset. Each webpage should have a few notes. For the responsive design portion, please responsify your website in at least 3 clear ways and explain what they are. For the visual design section, please improve your site in at least 3 ways and state why you made the changes you did.
