--- a/_posts/2016-3-2-MP-3.md
+++ b/_posts/2016-3-2-MP-3.md
@@ -9,7 +9,7 @@ due: Mar 8, 11.59PM CST
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016) and [this repository](https://github.com/uiuc-web-programming/mp3_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
 <div class="section-heading"> Overview </div>
-In this programming assignment you will implement a separate front-end interface using AngularJS. The assignment has one part (and an additional extra credit part.) Please read through the entire MP before you start.
+In this programming assignment you will implement a separate front-end interface using AngularJS. The assignment has one part. Please read through the entire MP before you start.
 
 You can use the development environment and server setup you used for MP 1. Refer to Lab 3 for details about the MP 3 starter code. 
 
@@ -23,7 +23,7 @@ Your app should have the following features:
 1. A list view where users can input a search query and the app returns a list of movies that match the query. There should also be a way to sort the search results based on different properties of the results (such as the name or rank) and of specifying an ordering (ascending and descending). Also, the search bar should filter as you type.
 + A gallery view that displays the movie posters for all the movies. There should be a way to select movies from different genres in the gallery.
 + When an item in search view or the gallery view is clicked, the app should display the different attributes of the selected movie (from the JSON file). Also, this view should have previous and next buttons (can be implemented with arrows) that lets the user cycle through the list of movies. 
--+ You app should use animations wherever appropriate (at least once).-
++ You app should use animations wherever appropriate (at least once).-
 + You should use partials
 + You are free to use Foundation's components (such as the grid etc. ) for this part as long as it is used for styling and not used to implement the core functionality of the app.
 We recommend you to use the following project structure:
@@ -38,16 +38,16 @@ The line of code `<div ng-view></div>` in the index.html inserts a partial into 
 
 Also, here is a list of angular components that you might find useful
 https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController
-* [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
++ [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
 + [ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
-+ [ngModel](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/directive/ngModel)
-+ [ngRepeat](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/directive/ngRepeat)
-+ [filter](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/service/$filter)
-+ [orderBy](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/filter/orderBy)
-+ [$http](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/service/$http)
-+ [ngSrc](https://code.angularjs.org/1.3.13/docs/ (https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)api/ng/directive/ngSrc (https://docs.angularjs.org/api/ng/directive/ngSrc))
++ [ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
++ [ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
++ [filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
++ [orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
++ [$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
++ [ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
 
-For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng).
+For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng). Make sure you're looking at the correct Angular version.
  
 <div class="section-heading"> Rules </div>
 1.    This is an individual assignment. No collaboration is permitted.
@@ -67,7 +67,7 @@ src="./photos/skyline.jpg"
 ```
 This is needed because when we host your code for grading, the folder structure on our server would be different from what it was on your server and things would break. So, you have to make sure the code in your `public` folder works no matter where the public folder is placed on a server.
 
-###Grade Breakdown
+<div class="section-heading"> Grade Breakdown </div>
 Total Points : 50
 
 List View:
@@ -108,9 +108,6 @@ imdbControllers.controller('myController', function($scope, $http) {
 }); 
 ```
 This prevents the function parameter names from being changed.
-
-<div class="section-heading"> Grading Breakdown </div>
-TBD
 
 <div class="section-heading"> Submission Details </div>
 TBD.
