--- a/_posts/2016-3-2-MP-3.md
+++ b/_posts/2016-3-2-MP-3.md
@@ -15,6 +15,8 @@ You can use the development environment and server setup you used for MP 1. Refe
 
 To get started, follow the setup instructions in the README of [this repository](https://github.com/uiuc-web-programming/mp3_starter) 
 
+Here is a video demo for a [sample application](https://youtu.be/DmDZuAr7QJE)
+
 <div class="section-heading"> AngularJS Front-End Design </div>
 Goal: Create a single-page AngularJS app that lets users interact with the data from the [IMDB top 250 movies](http://www.imdb.com/chart/top). We've already crawled the data and formatted it as JSON: `public/data/imdb250.json`. We also downloaded the corresponding poster images for each movie: `public/data/images`. The images are named using the `imdbID` for each movies. 
 
@@ -37,15 +39,14 @@ The line of code `<div ng-view></div>` in the index.html inserts a partial into 
 + For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation). 
 
 Also, here is a list of angular components that you might find useful
-https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController
-+ [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
-+ [ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
-+ [ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
-+ [ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
-+ [filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
-+ [orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
-+ [$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
-+ [ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
++[ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
++[ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
++[ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
++[ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
++[filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
++[orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
++[$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
++[ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
 
 For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng). Make sure you're looking at the correct Angular version.
  
