--- a/_posts/2016-3-2-MP-3.md
+++ b/_posts/2016-3-2-MP-3.md
@@ -38,15 +38,15 @@ The line of code `<div ng-view></div>` in the index.html inserts a partial into 
 + Your Angular code should go in `js/app.js` except for the controllers. The controllers should be in `js/controllers.js`. This keeps your code organized.
 + For styling, you can use the scss files in `scss` folder like you did in MP 1 or write a css file or borrow css/scss from elsewhere (such as from Foundation). 
 
-Also, here is a list of angular components that you might find useful
-+[ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
-+[ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
-+[ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
-+[ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
-+[filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
-+[orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
-+[$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
-+[ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
+Also, here is a list of angular components that you might find useful:
+* [ngApp](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngApp)
+* [ngController](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngController)
+* [ngModel](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngModel)
+* [ngRepeat](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngRepeat)
+* [filter](https://code.angularjs.org/1.3.13/docs/api/ng/service/$filter)
+* [orderBy](https://code.angularjs.org/1.3.13/docs/api/ng/filter/orderBy)
+* [$http](https://code.angularjs.org/1.3.13/docs/api/ng/service/$http)
+* [ngSrc](https://code.angularjs.org/1.3.13/docs/api/ng/directive/ngSrc)
 
 For the complete list, please refer to the [Angular documentation](https://docs.angularjs.org/api/ng). Make sure you're looking at the correct Angular version.
  
