updated minor fix to MP4 spec

--- a/_posts/2016-3-9-MP-4.md
+++ b/_posts/2016-3-9-MP-4.md
@@ -8,7 +8,9 @@ due: April 5, 11.59PM CST
 
 <span style="color: red"> Attention: </span> Please watch [this repository](https://github.com/uiuc-web-programming/sp2016), [this repository](https://github.com/uiuc-web-programming/mp4_client_starter) and [this repository](https://github.com/uiuc-web-programming/mp4_server_starter) on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.
 
-** We will provide a script for you that will populate the database. In the meantime, feel free to test your front end against our endpoints. **
+** We will provide a script for you that will populate your own database. In the meantime, feel free to test your front-end against our endpoints. **
+
+**A demo of a sample app can be seen in [this video](https://www.youtube.com/watch?v=3MoYSJj5M3g).**
 
 ###Overview
 
@@ -83,7 +85,7 @@ We assume that each task can be assigned only to one user.
 
 Requirements:
 
-1. Your database should be on [mongolab](http://www.mongolab.com). It should contain at least 20 users and 100 tasks (about half of which should be completed) (**We will provide you a script to do this after spring break.**).
+1. Your database should be on [mLab](http://www.mlab.com). It should contain at least 20 users and 100 tasks (about half of which should be completed) (**We will provide you a script to do this after spring break.**).
 + Responses from your API should be a JSON object with two fields. The first field should be named `message` and should contain a human readable String. The second field should be named `data` and should contain the actual JSON response object. For example, here is a valid response:
 
 ```javascript
@@ -181,8 +183,6 @@ Requirements:
 	All your date entry fields should use a graphical date picker (wer recommend [this one](http://720kb.github.io/angular-datepicker/)).
 </li>
 </ol>
-
-**A demo of a sample app can be seen in [this video](https://www.youtube.com/watch?v=3MoYSJj5M3g).**
 
 We recommend you to use the following project structure:
 
